--- a/package.json
+++ b/package.json
@@ -8,22 +8,27 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.1.10",
     "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "jest": "^26.6.0",
+    "jest-enzyme": "^7.1.2",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
+    "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-test-renderer": "^17.0.2",
     "react-uuid": "^1.0.2",
     "redux": "^4.1.0",
@@ -34,7 +39,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --config=jest.config.json",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
